# savings-projection

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  prettier.config.js  vite.config.ts
api/: extract.py  main.py  pyproject.toml
app/: .prettierrc  components.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
app/src/: App.svelte  Chart.svelte  Config.svelte  Graph.svelte
app/src/lib/: shared.svelte.ts  shared.ts  types.d.ts
app/src/lib/components/: CurrencyInput.svelte  InterestTiers.svelte
app/src/lib/components/BonusRules/: BonusRules.svelte
app/src/lib/components/shadcn/drawer/: drawer-title.svelte
src/: App.svelte  Chart.svelte  Config.svelte  app.css
src/lib/: types.d.ts  utils.ts
src/lib/components/: Chart.svelte  CurrencyInput.svelte  InterestBalanceTiers.svelte  InterestTiers.svelte  NumberInput.svelte  NumberTiers.svelte  PercentInput.svelte
src/lib/components/BonusInterest/: BonusInterest.svelte  BonusInterestConditions.svelte  types.d.ts
src/lib/components/BonusRules/: BonusRule.svelte  BonusRules.svelte
src/lib/components/shadcn/accordion/: accordion-trigger.svelte
src/lib/components/shadcn/drawer/: drawer-description.svelte  drawer-footer.svelte  drawer-header.svelte  drawer-overlay.svelte
src/lib/components/shadcn/input/: input.svelte
src/lib/components/shadcn/label/: index.ts
src/lib/components/shadcn/select/: select-content.svelte  select-trigger.svelte
src/lib/components/shadcn/separator/: separator.svelte
src/lib/components/shadcn/tooltip/: tooltip-content.svelte
(+5 files in other folders)
