[project]
name = "api"
version = "0.1.0"
description = "A simple NLP API with LangExtract"
authors = [
    {name = "Mola Adedeji",email = "a.mola.dev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "langextract @ git+https://github.com/google/langextract.git",
    "dotenv (>=0.9.9,<0.10.0)",
    "pydantic (>=2.11.7,<3.0.0)",
]

[tool.poetry]
package-mode = false
packages = [{include = "api", from = "src"}]


[tool.poetry.dependencies]
langextract = {develop = true}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
